--- a/css/test position.css
+++ b/css/test position.css
@@ -1,17 +1,7 @@
-.containerflex {
-    display: flex;                  /* Kích hoạt flexbox cho phần tử chứa */
-    flex-direction: column;            /* Thiết lập hướng chính */
-    justify-content: space-around;      /* Căn chỉnh nội dung bên trong container có flexbox*/
-    padding:    5px;
-    background: #9C27B0;
-    min-width:  555px;
-    min-height: 555px;
-    margin:     auto;
-}
-
-.flexitem {
-    padding: 20px;
-    background: lightblue;
-    margin: 1px;
-    font-weight: bold;
+.parent {
+    display: flex;
+    justify-content: center;
+    /* position: absolute; */
+    background-color: red;
+    width: 100%;
 }
