--- a/gioithieu/main.css
+++ b/gioithieu/main.css
@@ -100,8 +100,11 @@ section:nth-of-type(2) {
   height: calc(100vh - 80px);
 }
 
-.container-body1 {
+#container-body1 {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container-conten {
