--- a/MY POROLIO/file.css
+++ b/MY POROLIO/file.css
@@ -1,30 +1,35 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-Html{
-    scroll-behavior: smooth;
+
+Html {
+  scroll-behavior: smooth;
 }
-body{
-    font-family: "Time New Roman",'Times New Roman', Times, serif;
+
+body {
+  font-family: 'Time New Roman', 'Times New Roman', Times, serif;
 }
-img{
-    ax-width: 100%;
-    width: 100%;
+
+img {
+  max-width: 100%;
+  width: 100%;
 }
-header{
-    position: relative;
-    width: 1920px;
-    height: 1000px;
-    background: #0F0E0E;
+
+header {
+  position: relative;
+  width: 1920px;
+  height: 1000px;
+  background: #0f0e0e;
 }
-#overplay{
-    position: absolute;
-    width: 515px;
-    height: 412px;
-    left: 217px;
-    top: 334px;
+
+#overplay {
+  position: absolute;
+  width: 515px;
+  height: 412px;
+  left: 217px;
+  top: 334px;
 }
