--- a/MY POROLIO/file.css
+++ b/MY POROLIO/file.css
@@ -1,30 +1,148 @@
-*,
-*::before,
-*::after {
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
-Html{
-    scroll-behavior: smooth;
-}
+
 body{
-    font-family: "Time New Roman",'Times New Roman', Times, serif;
+    background-color: #FFC0CB;
+    color:#4682B4;
 }
-img{
-    ax-width: 100%;
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    padding: 20px,10%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo{
+    font-size: 25px;
+    color: #4682B4;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.navbar a{
+    font-size: 18px;
+    color: #4682B4;
+    text-decoration: none;
+    font-size: 500;
+    margin-left: 35px;
+    transition: .3s;
+}
+
+.navbar a:hover, 
+.navbar a.active {
+    color:#BEBEBE;
+}
+
+.home{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0 10%;
+}
+
+
+.home-content{
+    max-width: 700px;
+}
+
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.home-content h3{
+    font-size: 32px;
+    font-weight: 700;
+    color: #000000;
+}
+
+.home-content p{
+    font-size: 18px;
+    margin: 20px 0 40px;
+}
+
+.home-content btn-box {
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    height: 100px;
+    background: #B0C4DE;
+}
+
+.btn-box a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #000000;
+    border: 2px solid;
+    border-radius: 8px;
+    font-size: 19px;
+    color: #F5F5F5;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;z
+}
+
+.btn-box a:nth-child(2){
+    background:#4682B4;
+    color: #F5F5F5;
+}
+
+.btn-box a:nth-child(1){
+    background: #4682B4;
+}
+
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #BEBEBE;
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-box a:hover:before{
     width: 100%;
 }
-header{
-    position: relative;
-    width: 1920px;
-    height: 1000px;
-    background: #0F0E0E;
-}
-#overplay{
+
+.home-sci{
     position: absolute;
-    width: 515px;
-    height: 412px;
-    left: 217px;
-    top: 334px;
+    bottom: 40px;
+    width: 170px;
+    background: #4682B4;
 }
+
+.home-sci a{
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #4682B4;
+}
+    
+
+
+
+
