--- a/MY POROLIO/file.css
+++ b/MY POROLIO/file.css
@@ -7,7 +7,6 @@
 }
 
 body{
-    background-color: #FFC0CB;
     color:#4682B4;
 }
 
@@ -25,15 +24,28 @@ body{
 }
 
 .logo{
+    position: relative;
     font-size: 25px;
-    color: #4682B4;
+    color: #000080;
     text-decoration: none;
     font-weight: 600;
 }
 
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #BEBEBE;
+    animation: showRight 1s ease forwards;
+    animation-delay: .4s;
+}
+
 .navbar a{
     font-size: 18px;
-    color: #4682B4;
+    color: #000080;
     text-decoration: none;
     font-size: 500;
     margin-left: 35px;
@@ -47,6 +59,9 @@ body{
 
 .home{
     height: 100vh;
+    background: url(../assets/images/317086215_592412472885648_3267795302673547942_n.jpg)no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
@@ -58,21 +73,68 @@ body{
 }
 
 .home-content h1{
+    position: relative;
+    color: #000080;
     font-size: 56px;
     font-weight: 700;
     line-height: 1.2;
 }
 
-.home-content h3{
-    font-size: 32px;
-    font-weight: 700;
-    color: #000000;
+.home-content h1:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #BEBEBE;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1s;
 }
 
-.home-content p{
-    font-size: 18px;
-    margin: 20px 0 40px;
+.home-content h3{
+    position: relative;
+    font-size: 32px;
+    font-weight: 700px;
+    color: #F08080;
 }
+
+
+.home-content h3:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #BEBEBE;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.3s;
+}
+
+
+
+.home-content p{
+    position: relative;
+    font-size: 20px;
+    margin: 28px 0 40px;
+    color: #F5F5F5;
+}
+
+
+.home-content p:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #BEBEBE;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.6s;
+}
+
+
 
 .home-content btn-box {
     display: flex;
@@ -81,6 +143,7 @@ body{
     height: 100px;
     background: #B0C4DE;
 }
+
 
 .btn-box a{
     position: relative;
@@ -103,8 +166,9 @@ body{
 }
 
 .btn-box a:nth-child(2){
-    background:#4682B4;
-    color: #F5F5F5;
+    background-color: #4682b4;
+    color: #000;
+
 }
 
 .btn-box a:nth-child(1){
@@ -127,22 +191,186 @@ body{
     width: 100%;
 }
 
-.home-sci{
+.social-media{
     position: absolute;
     bottom: 40px;
     width: 170px;
-    background: #4682B4;
+    display: flex;
+    justify-content: space-between;
 }
 
-.home-sci a{
+.social-media a{
+    position: relative;
     display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 40px;
     height: 40px;
     background: transparent;
     border: 2px solid #4682B4;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #4682B4;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.social-media a:hover{
+    color: #BEBEBE;
+}
+
+.social-media a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background:#DCDCDC;
+    transition: .5s;
+    z-index: -1;
+}
+
+.social-media a:hover::before{
+    width: 100%;
 }
     
+@keyframes showRight {
+    100%{
+        width: 0;
+    }
+    
+}
 
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background: var(--second-bg-color);
+    padding-bottom: 6rem;
+}
 
+.heading{
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
 
+span{
+    color: #000000;
+}
 
+.about-img{
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-img img{
+    width: 90%;
+    border-radius: 50%;
+    border: .2rem solid var(--main-color);
+}
+.about-img .circle-spin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)rotate(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border-top: .2rem solid #000000;
+    border-bottom: .2rem solid #000000;
+    border-left: .2rem solid #000080;
+    border-right: .2rem solid #000080;
+}
+
+.about-content{
+    text-align: center;
+}
+
+.about-content h3{
+    font-size: 2.6rem;
+}
+
+.about-content p{
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+}
+
+.btn-box.btns{
+    display: block;
+    width: 15rem;
+}
+
+.btn-box.btns a::before{
+    background: #BEBEBE;
+}
+
+.work{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: auto;
+    padding-bottom: 5rem;
+}
+
+.work .work-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+}
+
+.work-row .work-column{
+    flex: 1 1 40rem;
+}
+
+.work-column .title{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
+
+.work-column .work-box{
+    border: .2rem solid #FFFFFF;
+}
+
+.work-box .WORK-CONTENT{
+    position: relative;
+    padding-left: .2rem;
+}
+
+.WORK-CONTENT .CONTENT{
+    position: relative;
+    padding: 1.5rem;
+    border: 2rem solid #000000;
+    border-radius: .6rem;
+    margin-bottom: 2rem;
+}
+
+.WORK-CONTENT .CONTENT .YEAR{
+    font-size: 4rem;
+    color: #000080;
+    padding-bottom: .5rem;
+}
+
+.WORK-CONTENT .CONTENT .YEAR i{
+    padding-right: .5rem;
+}
+
+.WORK-CONTENT .CONTENT h3{
+    font-size: 2rem;
+}
+
+.WORK-CONTENT .CONTENT p{
+    font-size: 1.6rem;
+    padding-top: .5rem;
+}
