--- a/MY POROLIO/file.css
+++ b/MY POROLIO/file.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 *{
     margin: 0;
@@ -163,16 +162,16 @@ body{
     letter-spacing: 1px;
     z-index: 1;
     overflow: hidden;
-    transition: .5s;z
+    transition: .5s;
 }
 
 .btn-box a:nth-child(2){
     background-color: #4682b4;
-    color: #000;
+    color: #000000;
 
 }
 
-.btn-box a:nth-child(1){
+.btn-box a:first-child{
     background: #4682B4;
 }
 
@@ -395,40 +394,3 @@ span{
     padding-top: .5rem;
 }
 
-=======
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-Html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: 'Time New Roman', 'Times New Roman', Times, serif;
-}
-
-img {
-  max-width: 100%;
-  width: 100%;
-}
-
-header {
-  position: relative;
-  width: 1920px;
-  height: 1000px;
-  background: #0f0e0e;
-}
-
-#overplay {
-  position: absolute;
-  width: 515px;
-  height: 412px;
-  left: 217px;
-  top: 334px;
-}
->>>>>>> 396b926f0537032ea8d8a580da26391f6ce121e9
