--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
   --second-bg-color: #323946;
   --text-color: #fff;
   --main-color: rgb(146, 39, 170);
+  --smooth: all 0.3s ease-in;
 }
 
 html {
@@ -32,6 +33,8 @@ section {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
 }
+
+/*header*/
 
 .header {
   position: fixed; /*đặt phần tử trong vị trí tuyệt đối và không bị ảnh hưởng bởi scroll của trang web.*/
@@ -50,6 +53,8 @@ section {
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2); /*áp dụng phần header đầu trang phân biệt giữa header với phần nội dung bên dưới khi người dùng cuộn trang xuống.*/
 }
 
+/*logo*/
+
 .logo {
   font-size: 2.5rem;
   color: var(--text-color);
@@ -57,6 +62,8 @@ section {
   cursor: default; /*con trỏ sẽ không thay đổi hình dạng khi di chuột qua phần tử*/
   color: var(--main-color);
 }
+
+/*navbar*/
 
 .navbar a {
   font-size: 1.7rem;
@@ -75,6 +82,8 @@ section {
   color: var(--text-color);
   display: none; /*ẩn phần tử, có nghĩa là phần tử này không sẽ được hiển thị trên trang web.*/
 }
+
+/*home*/
 
 .home {
   display: flex;
@@ -155,6 +164,8 @@ span {
   background: rgb(28, 226, 236);
 }
 
+/*about*/
+
 .about {
   display: flex;
   justify-content: center;
@@ -193,6 +204,8 @@ span {
 .about-centent ul li {
   color: aquamarine;
 }
+
+/*services*/
 
 .services h2 {
   margin-bottom: 5rem;
@@ -236,6 +249,8 @@ span {
   margin: 1rem 0 3rem;
   color: rgb(55, 230, 230);
 }
+
+/*portfolio*/
 
 .portfolio {
   background: var(--second-bg-color);
@@ -326,6 +341,8 @@ span {
 .portfolio-layer:hover a {
   background: var(--main-color);
 }
+
+/*contact*/
 
 .contact h2 {
   margin-bottom: 3rem;
