--- a/css/check.css
+++ b/css/check.css
@@ -59,6 +59,13 @@ body {
     transition: 0.7s;
     opacity: 0;
     top: 55px;
+
+}
+
+.navbar__main--list:hover .navbar__branch {
+    opacity: 1;
+    top: 69px;
+
 }
 
 .navbar__branch--list {
@@ -72,31 +79,31 @@ body {
     text-decoration: none;
 }
 
-.media__facebook--link .fa-facebook-f {
+.media__facebook--link i {
     background-color: #1877F2;
     color: var(--wh);
-    font-size: 13pt;
+    font-size: 14pt;
     width: 44.59px;
     height: 33.59px;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
+    margin-right: 5px;
 }
 
-.media__youtube--link .fa-youtube {
+.media__youtube--link i {
     background-color: #CD201F;
     color: var(--wh);
-    font-size: 13pt;
+    font-size: 15pt;
     width: 44.59px;
     height: 33.59px;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
+    margin-right: 5px;
 }
 
-.media__tiktok--link .fa-tiktok {
+.media__tiktok--link i {
     background-color: #000000;
     color: var(--wh);
     font-size: 13pt;
@@ -105,12 +112,7 @@ body {
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
-}
-
-.navbar__main--list:hover .navbar__branch {
-    opacity: 1;
-    top: 69px;
+    margin-right: 5px;
 }
 
 .navbar__main--link:hover {
@@ -121,7 +123,15 @@ body {
     color: var(--gr);
 }
 
-.fa-brands:hover {
+.media__facebook--link i:hover {
+    opacity: 0.8;
+}
+
+.media__youtube--link i:hover {
+    opacity: 0.8;
+}
+
+.media__tiktok--link i:hover {
     opacity: 0.8;
 }
 
