--- a/MY POROLIO/file.css
+++ b/MY POROLIO/file.css
@@ -21,7 +21,14 @@ body{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    transition: .3s;
 }
+
+.header.sticky{
+    background: yellowgreen;
+}
+
+
 
 .logo{
     position: relative;
@@ -96,7 +103,7 @@ body{
     position: relative;
     font-size: 32px;
     font-weight: 700px;
-    color: #F08080;
+    color: #000000;
 }
 
 
@@ -394,3 +401,71 @@ span{
     padding-top: .5rem;
 }
 
+.contact form{
+    max-width: 70rem;
+    margin: auto;
+    text-align: center;
+}
+
+.contact form .input-hox{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-hox .inpux-field{
+    position: relative;
+    width: 49%;
+    margin: .8rem 0;
+}
+
+.contact form .input-hox .inpux-field input,
+.contact form .textarea-field textarea{
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: #000000;
+    background: transparent;
+    border-radius: .6rem;
+    border: .2rem solid #000080;
+}
+
+.contact form .input-hox .inpux-field input::placeholder,
+.contact form .textarea-field textarea::placeholder{
+    color: #000000;
+}
+
+.contact form .focus{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #F08080;
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .5s;
+}
+
+.contact form .input-hox .inpux-field input:focus~.focus,
+.contact form .input-hox .inpux-field input:valid~.focus,
+.contact form .textarea-field textarea:focus~.focus,
+.contact form .textarea-field textarea:valid~.focus{
+    width: 100%;
+}
+
+.contact form .textarea-field{
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+}
+
+.contact form .textarea-field textarea{
+    resize: none;
+}
+
+.contact form .btn-box.btns .btn{
+    cursor: pointer;
+}
