--- a/css/check.css
+++ b/css/check.css
@@ -1,39 +1,21 @@
-*,
-*::before,
-*::after {
-    margin: 0px;
-    padding: 0px;
+* {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.home__sub {
+.container {
+    background-color: red;
     position: relative;
-    top: -7px;
-    display: grid;
-    /* grid-template-columns: 1.03125% 48.453125% 1.03125% 48.453125% 1.03125%; */
-    grid-template-columns: 4vw 44vw 4vw 44vw 4vw;
-    grid-template-rows: 10vh 10vh;
+    width: 100%;
+    padding-top: 100%;
+    /* 1:1 Aspect Ratio */
 }
 
-
-
-.item1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-}
-
-.item6 {
-    grid-column: 2 / 5;
-}
-
-.item5 {
-    grid-column: 5 / 6;
-    grid-row: 1 / 3;
-}
-
-
-.item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.text {
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    background-color: green;
 }
