--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@
 body {
     position: relative;
     background-color: var(--bl);
-    width: 100%;
 }
 
 img {
@@ -34,7 +33,7 @@ img {
 
 .navbar__main {
     position: absolute;
-    top: 6.7rem;
+    top: 6.66rem;
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -49,7 +48,7 @@ img {
 
 .navbar__main--link {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 4.9rem;
+    font-size: 4.88rem;
     color: var(--wh);
     text-decoration: none;
 }
@@ -63,6 +62,7 @@ img {
     transition: 0.7s;
     opacity: 0;
     top: 4.2rem;
+    visibility: hidden;
 }
 
 .navbar__branch--list {
@@ -71,7 +71,7 @@ img {
 
 .navbar__branch--link {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 2.9rem;
+    font-size: 2.88rem;
     color: var(--wh);
     text-decoration: none;
 }
@@ -79,42 +79,43 @@ img {
 .navbar__media--link .fa-facebook-f {
     background-color: #1877F2;
     color: var(--wh);
-    font-size: 13pt;
-    width: 44.59px;
-    height: 33.59px;
+    font-size: 1.1rem;
+    width: 2.8rem;
+    height: 2.1rem;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
+    margin: 0.7rem 0.3rem 0.7rem 0rem;
 }
 
 .navbar__media--link .fa-youtube {
     background-color: #CD201F;
     color: var(--wh);
-    font-size: 13pt;
-    width: 44.59px;
-    height: 33.59px;
+    font-size: 1.1rem;
+    width: 2.8rem;
+    height: 2.1rem;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
+    margin: 0.7rem 0.3rem 0.7rem 0rem;
 }
 
 .navbar__media--link .fa-tiktok {
     background-color: #000000;
     color: var(--wh);
-    font-size: 13pt;
-    width: 44.59px;
-    height: 33.59px;
+    font-size: 1.1rem;
+    width: 2.8rem;
+    height: 2.1rem;
     display: inline-flex !important;
     justify-content: center;
     align-items: center;
-    margin: 9px 5px 9px 0px;
+    margin: 0.7rem 0.3rem 0.7rem 0rem;
 }
 
 .navbar__main--list:hover .navbar__branch {
     opacity: 1;
-    top: 5.2rem;
+    top: 5.17rem;
+    visibility: visible;
 }
 
 .navbar__main--link:hover {
@@ -131,7 +132,7 @@ img {
 
 #home {
     position: relative;
-    top: -4px;
+    top: -0.25rem;
 }
 
 .home__main {
@@ -140,18 +141,23 @@ img {
 
 .home__main--bottom {
     position: relative;
-    top: -4px;
+    top: -0.25rem;
 }
 
 .home__sub {
     position: relative;
-    top: -7px;
+    top: -0.4375rem;
     display: grid;
-    grid-template-columns: 1.03125% 48.453125% 1.03125% 48.453125% 1.03125%;
+    grid-template-columns: 1.33% 47.38% 2.58% 47.38% 1.33%;
 }
 
 .home__sub--left {
     grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.home__sub--right {
+    grid-column: 5 / 6;
     grid-row: 1 / 3;
 }
 
@@ -160,25 +166,97 @@ img {
     grid-row: 2 / 3;
 }
 
-.home__sub--right {
-    grid-column: 5 / 6;
-    grid-row: 1 / 3;
+/* OK */
+
+#about {
+    background-image: url("/assets/about__background.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    top: -0.6rem;
+    width: 100%;
+    padding-top: 26.25%;
+    /* background-color: red; */
 }
 
-.home__sub--center {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+.about__content {
+    position: absolute;
+    top: 0.5rem;
+    padding-left: 1rem;
+    /* background-color: yellow; */
 }
 
-.home__banner--left {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+.about__picture--first {
+    background-color: var(--gr);
+    position: absolute;
+    top: 28.5%;
+    right: 76.3%;
+    bottom: 5%;
+    left: 1.3%;
 }
 
-.home__banner--right {
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
+.about__picture--second {
+    background-color: var(--gr);
+    position: absolute;
+    top: 28.5%;
+    right: 51.3%;
+    bottom: 5%;
+    left: 26.3%;
 }
+
+.about__picture--third {
+    background-color: var(--gr);
+    position: absolute;
+    top: 28.5%;
+    right: 26.3%;
+    bottom: 5%;
+    left: 51.3%;
+}
+
+.about__picture--fourth {
+    background-color: var(--gr);
+    position: absolute;
+    top: 28.5%;
+    right: 1.3%;
+    bottom: 5%;
+    left: 76.3%;
+}
+
+.title {
+    font-family: Reboot Crush;
+    font-size: 1.6rem;
+    color: var(--wh);
+}
+
+.word {
+    margin-top: 0.6rem;
+    font-family: Reboot Crush;
+    font-size: 0.7rem;
+    color: var(--wh);
+}
+
+
+
+
+
+
+.home__block--left {
+    width: 1.33%;
+}
+
+.home__block--right {
+    width: 1.33%;
+}
+
+.home__block--center {
+    width: 97.34%;
+}
+
+
+/* #footer {
+    position: absolute;
+    top: 79rem;
+} */
 
 /* .about__paragraph {
     position: absolute;
@@ -188,5 +266,3 @@ img {
     font-size: 12pt;
     color: var(--wh);
 } */
-
-/* OK */
