--- a/css/index.css
+++ b/css/index.css
@@ -1,53 +1,53 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 19px;
+  font-family: "Roboto", sans-serif;
+  font-size: 19px;
 }
 .responsive {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 .image {
-    flex: 2;
-    margin: 1%;
-    max-width: 33.33%;
-    height: auto;
+  flex: 2;
+  margin: 1%;
+  max-width: 33.33%;
+  height: auto;
 }
 .text {
-    flex: 1;
-    margin-top: 10px;
-    margin-right: 10px;
-    max-width: 66.67%;
+  flex: 1;
+  margin-top: 10px;
+  margin-right: 10px;
+  max-width: 66.67%;
 }
 .text h1 {
-    font-size: 22px;
-    margin-top: 40px;
-    color: black;
+  font-size: 22px;
+  margin-top: 40px;
+  color: black;
 }
 .text h2 {
-    font-size: 18px;
-    margin-top: 40px;
-    color: black;
+  font-size: 18px;
+  margin-top: 40px;
+  color: black;
 }
 .text p {
-    font-size: 16px;
-    color: black;
+  font-size: 16px;
+  color: black;
 }
 .button {
-    display: inline-block;
-    background-color: whitesmoke);
-    font-size: 15px;
-    color: black;
-    border: 1px solid black;
+  display: inline-block;
+  background-color: whitesmoke;
+  font-size: 15px;
+  color: black;
+  border: 1px solid black;
 }
-.button:hover{
-    background-color: grey;
-    color: white;
+.button:hover {
+  background-color: grey;
+  color: white;
 }
 @media only screen and (max-width: 768px) {
-    .image {
-        max-width: 100%;
-    }
-    .text {
-        max-width: 100%;
-    }
+  .image {
+    max-width: 100%;
+  }
+  .text {
+    max-width: 100%;
+  }
 }
