--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,10 @@
     --gr: grey;
 }
 
-body {
+html {
     position: relative;
     background-color: var(--bl);
+    scroll-behavior: smooth;
 }
 
 img {
@@ -53,7 +54,7 @@ img {
     text-decoration: none;
 }
 
-.navbar__branch {
+.navbar__sub {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
     list-style: none;
@@ -65,11 +66,11 @@ img {
     visibility: hidden;
 }
 
-.navbar__branch--list {
+.navbar__sub--list {
     position: relative;
 }
 
-.navbar__branch--link {
+.navbar__sub--link {
     font-family: WraithArcBlocks-5n0v;
     font-size: 2.88rem;
     color: var(--wh);
@@ -112,7 +113,7 @@ img {
     margin: 0.7rem 0.3rem 0.7rem 0rem;
 }
 
-.navbar__main--list:hover .navbar__branch {
+.navbar__main--list:hover .navbar__sub {
     opacity: 1;
     top: 5.17rem;
     visibility: visible;
@@ -122,7 +123,7 @@ img {
     color: var(--gr);
 }
 
-.navbar__branch--link:hover {
+.navbar__sub--link:hover {
     color: var(--gr);
 }
 
@@ -130,111 +131,158 @@ img {
     opacity: 0.8;
 }
 
-.home__main {
+.home__block--main {
     position: relative;
     top: -0.25rem;
     display: flex;
 }
 
-.home__block--left {
+.home__block--main-left {
     width: 1.33%;
     order: 1;
 }
 
-.home__block--right {
+.home__block--main-right {
     width: 1.33%;
     order: 3;
 }
 
-.home__block--center {
+.home__block--main-center {
     width: 97.34%;
     order: 2;
 }
 
-.home__main--bottom {
-    position: relative;
-    top: -0.25rem;
+.home__block--banner-first {
+    overflow: hidden;
 }
 
-.home__content--first {
+.home__block--main-bottom {
+    position: relative;
+    top: -0.20rem;
+}
+
+.home__block--content-first {
     position: absolute;
     right: 2.05rem;
     bottom: 2.15rem;
+}
+
+.home__image--banner-first {
+    transition: 5s;
+}
+
+.home__paragraph--content-first {
     font-family: WraithArcBlocks-5n0v;
     font-size: 4.88rem;
     color: var(--wh);
     cursor: pointer;
 }
 
-.home__sub {
+.home__block--sub {
     position: relative;
-    top: -0.73rem;
+    top: -0.64rem;
     display: grid;
     grid-template-columns: 1.33% 47.38% 2.58% 47.38% 1.33%;
 }
 
-.home__sub--left {
+.home__block--sub-left {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
 
-.home__sub--right {
+.home__block--sub-right {
     grid-column: 5 / 6;
     grid-row: 1 / 3;
 }
 
-.home__sub--center {
+.home__block--sub-center {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
 }
 
-.home__sub--bottom {
+.home__block--banner-second {
+    overflow: hidden;
+}
+
+.home__block--banner-third {
+    overflow: hidden;
+}
+
+.home__block--sub-bottom {
     grid-column: 2 / 5;
     grid-row: 2 / 3;
+    position: relative;
+    top: -0.24rem;
 }
 
-.home__content--second {
+.home__block--content-second {
     position: absolute;
     right: 41.41rem;
-    bottom: 2.25rem;
-    font-family: WraithArcBlocks-5n0v;
-    font-size: 2.88rem;
-    color: var(--wh);
-    cursor: pointer;
+    bottom: 2.75rem;
 }
 
-.home__content--third {
+.home__block--content-third {
     position: absolute;
     right: 2.05rem;
-    bottom: 2.25rem;
+    bottom: 2.75rem;
+}
+
+.home__image--banner-second {
+    transition: 5s;
+}
+
+.home__image--banner-third {
+    transition: 5s;
+}
+
+.home__paragraph--content-second {
     font-family: WraithArcBlocks-5n0v;
     font-size: 2.88rem;
     color: var(--wh);
     cursor: pointer;
 }
 
-.home__content--first:hover {
+.home__paragraph--content-third {
+    font-family: WraithArcBlocks-5n0v;
+    font-size: 2.88rem;
+    color: var(--wh);
+    cursor: pointer;
+}
+
+.home__image--banner-first:hover {
+    transform: scale(110%);
+}
+
+.home__image--banner-second:hover {
+    transform: scale(110%);
+}
+
+.home__image--banner-third:hover {
+    transform: scale(110%);
+}
+
+.home__paragraph--content-first:hover {
     color: var(--gr);
 }
 
-.home__content--second:hover {
+.home__paragraph--content-second:hover {
     color: var(--gr);
 }
 
-.home__content--third:hover {
+.home__paragraph--content-third:hover {
     color: var(--gr);
 }
 
 #about {
-    background-image: url("/assets/about__background.png");
+    background-image: url("/assets/images/about__image--background.png");
     background-size: 100%;
     background-repeat: no-repeat;
     position: relative;
-    top: -0.7rem;
+    top: -1.2rem;
     padding-top: 33.75%;
 }
 
-.about__block--first {
+.about__block--banner-first {
     position: absolute;
     top: 22.35%;
     right: 76.25%;
@@ -243,7 +291,7 @@ img {
     overflow: hidden;
 }
 
-.about__block--second {
+.about__block--banner-second {
     position: absolute;
     top: 22.35%;
     right: 51.25%;
@@ -252,7 +300,7 @@ img {
     overflow: hidden;
 }
 
-.about__block--third {
+.about__block--banner-third {
     position: absolute;
     top: 22.35%;
     right: 26.25%;
@@ -261,7 +309,7 @@ img {
     overflow: hidden;
 }
 
-.about__block--fourth {
+.about__block--banner-fourth {
     position: absolute;
     top: 22.35%;
     right: 1.25%;
@@ -270,37 +318,42 @@ img {
     overflow: hidden;
 }
 
-.about__picture {
-    transition: 0.7s;
+.about__image--banner {
+    transition: 5s;
 }
 
-.about__content--first {
+.about__block--content-first {
     position: absolute;
     top: 0.45rem;
     left: 1rem;
+}
+
+.about__block--content-second {
+    position: absolute;
+    top: 3.75rem;
+    left: 1rem;
+}
+
+.about__paragraph--content-first {
     font-family: Reboot Crush;
     font-size: 1.77rem;
     color: var(--wh);
 }
 
-.about__content--second {
-    position: absolute;
-    top: 3.75rem;
-    left: 1rem;
+.about__paragraph--content-second {
     font-family: Reboot Crush;
     font-size: 0.88rem;
     color: var(--wh);
 }
 
-.about__block:hover .about__picture {
-    transform: scale(1.1);
+.about__image--banner:hover {
+    transform: scale(110%);
+}
+
+#footer {
+    position: absolute;
+    top: 84.9rem;
 }
 
 /* OK */
-
-.about__block {
-    cursor: pointer;
-}
-
-
 
