--- a/css/check.css
+++ b/css/check.css
@@ -4,20 +4,25 @@
     margin: 0;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-}
-
 div {
-    overflow: hidden;
+
+    background-color: yellow;
+    width: 100;
+    position: relative;
 }
 
-img {
+div:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: red;
+    width: 0%;
+    height: 100%;
+    transition: 1s;
+}
+
+div:hover:before {
     width: 100%;
-    transition: 0.7s;
-}
-
-img:hover {
-    transform: scale(110%);
+    height: 100%;
 }
