--- a/index.css
+++ b/index.css
@@ -9,8 +9,9 @@ html {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
 }
+
 a {
   color: var(--color-white);
 }
@@ -21,9 +22,12 @@ a {
   --color-black: black;
   --color-button: #4f9cf9;
   --color-button-login: #ffe492;
+  --color-background-img: #c4defd;
 
   /* font-size */
+  --font-family: "Inter", sans-serif;
   --bigger-font-size: 64px;
+  --small-font-size: 18px;
 }
 
 /* HEADER */
@@ -49,18 +53,94 @@ a {
   list-style: none;
 }
 .nav__button {
-  width: 250px;
+  width: 270px;
   list-style: none;
 }
 
 .nav__login {
-  border-radius: 10%;
+  border-radius: 8px;
   background-color: var(--color-button-login);
   padding: 10px 15px;
+  color: var(--color-black);
+  margin-right: px;
+  transition: transform 0.2s;
 }
 
+.nav__login:hover,
+.nav__try:hover {
+  transform: translateY(-0.2rem);
+}
+
+.nav__link,
+.nav__login,
 .nav__try {
-  border-radius: 10%;
+  text-decoration: none;
+}
+.nav__try {
+  border-radius: 8px;
   background-color: var(--color-button);
   padding: 10px 15px;
+  transition: transform 0.2s;
+}
+
+/* Section 1 */
+.container__section1 {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  align-items: center;
+  background-color: #043873;
+  height: 90vh;
+  border: solid var(--color-button) 2px;
+  background-image: url("./acssets/img/img_background_section1.png");
+}
+
+.section1__title {
+  color: var(--color-white);
+  font-size: 64px;
+  font-family: var(--font-family);
+  font-size: var(--bigger-font-size);
+  font-weight: 700;
+  margin-bottom: 24px;
+  padding-right: 20px;
+}
+
+.section1__content {
+  color: var(--color-white);
+  padding-bottom: 60px;
+  font-family: var(--font-family);
+  font-size: var(--small-font-size);
+  font-weight: 400;
+  padding-right: 20px;
+}
+
+.section1__button {
+  text-decoration: none;
+  border-radius: 8px;
+  background-color: var(--color-button);
+  padding: 10px 15px;
+  transition: transform 0.2s;
+  font-family: var(--font-family);
+}
+
+.section1__button:hover {
+  transform: translateY(-0.2rem);
+}
+
+.section1__img {
+  background-color: var(--color-background-img);
+  border-radius: 2rem;
+  width: 500px;
+  height: 350px;
+  overflow: hidden;
+}
+
+.section1__img img {
+  width: 100%;
+  height: 100%;
+  transition: 5s;
+}
+
+.section1__img img:hover {
+  transform: scale(1.2);
 }
