--- a/css/main.css
+++ b/css/main.css
@@ -248,12 +248,12 @@ img {
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
-    transition: 7s cubic-bezier(.23,1,.32,1);
+    transition: 3s cubic-bezier(0.23, 1, 0.32, 1);
     opacity: 0;
 }
 
 .home__image--banner {
-    transition: 7s cubic-bezier(.23,1,.32,1);
+    transition: 12s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .home__block--banner:hover:after {
@@ -353,12 +353,12 @@ img {
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
-    transition: 7s cubic-bezier(.23,1,.32,1);
+    transition: 3s cubic-bezier(0.23, 1, 0.32, 1);
     opacity: 0;
 }
 
 .about__image--banner {
-    transition: 7s cubic-bezier(.23,1,.32,1);
+    transition: 12s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .about__block--banner:hover:after {
@@ -371,7 +371,7 @@ img {
 
 #footer {
     position: absolute;
-    top: 84.9rem;
+    top: 84.8rem;
 }
 
 /* OK */
